# mkdocs-external-images

./: README.md  pyproject.toml
src/mkdocs_external_images/: __init__.py
