[project]
name = "mkdocs-external-images"
version = "0.2.0"
description = "Serve external assets for mkdocs"
readme = "README.md"
authors = [
    { name = "Flet developers", email = "hello@flet.dev" }
]
requires-python = ">=3.10"
dependencies = ["mkdocs>=1.4"]

[project.entry-points."mkdocs.plugins"]
external-images = "mkdocs_external_images:ExternalImagesPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
